[package]
name = "rsomics-fasta-mask"
version = "0.1.0"
description = "Mask FASTA sequences by BED regions — soft-mask (lowercase) or hard-mask (N)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rsomics-fasta-mask"
path = "src/main.rs"

[lib]
name = "rsomics_fasta_mask"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-intervals = { path = "../../../foundation/rsomics-intervals", version = "0.1" }
clap.workspace = true
needletail = { version = "0.7", default-features = false }

[lints]
workspace = true
