[package]
name = "rsomics-fasta-mask"
version = "0.1.0"
description = "Mask FASTA sequences by BED regions — soft-mask (lowercase) or hard-mask (N)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-fasta-mask"
path = "src/main.rs"

[lib]
name = "rsomics_fasta_mask"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-intervals = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
needletail = { version = "0.7", default-features = false }


[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false
